--- a/app/src/main/res/layout/activity_instructions.xml
+++ b/app/src/main/res/layout/activity_instructions.xml
@@ -10,9 +10,6 @@
         android:id="@+id/bottomNav"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="0dp"
-        android:layout_marginLeft="0dp"
-        android:layout_marginRight="0dp"
         android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
@@ -29,52 +26,66 @@
         app:srcCompat="@mipmap/ic_person_white_36dp"
         android:layout_marginLeft="16dp"
         app:layout_constraintLeft_toLeftOf="@+id/bottomNav"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
         app:layout_constraintTop_toTopOf="@+id/bottomNav"
         android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/bottomNav"
-        android:layout_marginBottom="8dp" />
+        android:layout_marginStart="16dp" />
 
     <ImageButton
-        android:id="@+id/logoutButton"
+        android:id="@+id/leftButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="8dp"
         android:background="@null"
-        app:layout_constraintBottom_toBottomOf="@+id/bottomNav"
+        app:srcCompat="@mipmap/ic_exit_to_app_white_36dp"
+        android:layout_marginRight="16dp"
         app:layout_constraintRight_toRightOf="@+id/bottomNav"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
         app:layout_constraintTop_toTopOf="@+id/bottomNav"
-        app:srcCompat="@mipmap/ic_exit_to_app_white_36dp" />
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp" />
 
     <ImageButton
-        android:id="@+id/backButton"
+        android:id="@+id/rightButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@null"
         app:srcCompat="@mipmap/ic_chevron_left_white_36dp"
+        app:layout_constraintLeft_toRightOf="@+id/userButton"
+        android:layout_marginLeft="64dp"
         app:layout_constraintBottom_toBottomOf="@+id/bottomNav"
         android:layout_marginBottom="8dp"
         app:layout_constraintTop_toTopOf="@+id/bottomNav"
         android:layout_marginTop="8dp"
-        android:layout_marginLeft="0dp"
-        app:layout_constraintLeft_toLeftOf="@+id/bottomNav"
-        android:layout_marginRight="112dp"
-        app:layout_constraintRight_toRightOf="@+id/bottomNav" />
+        android:layout_marginStart="64dp" />
 
     <ImageButton
-        android:id="@+id/forwardButton"
+        android:id="@+id/exitButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="112dp"
-        android:layout_marginRight="0dp"
-        android:layout_marginTop="8dp"
         android:background="@null"
+        app:srcCompat="@mipmap/ic_chevron_right_white_36dp"
+        app:layout_constraintRight_toLeftOf="@+id/leftButton"
+        android:layout_marginRight="64dp"
         app:layout_constraintBottom_toBottomOf="@+id/bottomNav"
-        app:layout_constraintLeft_toLeftOf="@+id/bottomNav"
-        app:layout_constraintRight_toRightOf="@+id/bottomNav"
+        android:layout_marginBottom="8dp"
         app:layout_constraintTop_toTopOf="@+id/bottomNav"
-        app:srcCompat="@mipmap/ic_chevron_right_white_36dp" />
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="64dp" />
 
+    <ViewFlipper
+        android:id="@+id/flipper"
+        android:layout_width="0dp"
+        android:layout_height="439dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:outAnimation="@anim/slide_in_right"
+        android:inAnimation="@anim/slide_out_left"
+        app:layout_constraintBottom_toTopOf="@+id/bottomNav"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
