--- a/app/src/main/res/layout/activity_instructions.xml
+++ b/app/src/main/res/layout/activity_instructions.xml
@@ -74,7 +74,28 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="64dp" />
 
+    <TextView
+        android:id="@+id/loading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="11dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:gravity="center_horizontal|clip_vertical"
+        android:text="Loading..."
+        app:layout_constraintBottom_toBottomOf="@+id/flipper"
+        app:layout_constraintLeft_toLeftOf="@+id/flipper"
+        app:layout_constraintRight_toRightOf="@+id/flipper"
+        app:layout_constraintTop_toTopOf="@+id/flipper" />
+
     <ViewFlipper
+
+
         android:id="@+id/flipper"
         android:layout_width="0dp"
         android:layout_height="439dp"
@@ -87,5 +108,23 @@
         app:layout_constraintBottom_toTopOf="@+id/bottomNav"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent" >
+
+        <RelativeLayout
+            android:id="@+id/buttonFlip"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+
+            <Button
+                android:id="@+id/flipButton"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:text="Button"
+                android:visibility="invisible"
+                />
+
+        </RelativeLayout>
+    </ViewFlipper>
 </android.support.constraint.ConstraintLayout>
