--- a/app/src/main/res/layout/activity_instructions.xml
+++ b/app/src/main/res/layout/activity_instructions.xml
@@ -33,7 +33,7 @@
         android:layout_marginStart="16dp" />
 
     <ImageButton
-        android:id="@+id/leftButton"
+        android:id="@+id/exitButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@null"
@@ -47,32 +47,32 @@
         android:layout_marginEnd="16dp" />
 
     <ImageButton
+        android:id="@+id/leftButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="64dp"
+        android:layout_marginStart="64dp"
+        android:layout_marginTop="8dp"
+        android:background="@null"
+        app:layout_constraintBottom_toBottomOf="@+id/bottomNav"
+        app:layout_constraintLeft_toRightOf="@+id/userButton"
+        app:layout_constraintTop_toTopOf="@+id/bottomNav"
+        app:srcCompat="@mipmap/ic_chevron_left_white_36dp" />
+
+    <ImageButton
         android:id="@+id/rightButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@null"
-        app:srcCompat="@mipmap/ic_chevron_left_white_36dp"
-        app:layout_constraintLeft_toRightOf="@+id/userButton"
-        android:layout_marginLeft="64dp"
-        app:layout_constraintBottom_toBottomOf="@+id/bottomNav"
         android:layout_marginBottom="8dp"
-        app:layout_constraintTop_toTopOf="@+id/bottomNav"
-        android:layout_marginTop="8dp"
-        android:layout_marginStart="64dp" />
-
-    <ImageButton
-        android:id="@+id/exitButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@null"
-        app:srcCompat="@mipmap/ic_chevron_right_white_36dp"
-        app:layout_constraintRight_toLeftOf="@+id/leftButton"
+        android:layout_marginEnd="64dp"
         android:layout_marginRight="64dp"
-        app:layout_constraintBottom_toBottomOf="@+id/bottomNav"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintTop_toTopOf="@+id/bottomNav"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="64dp" />
+        android:background="@null"
+        app:layout_constraintBottom_toBottomOf="@+id/bottomNav"
+        app:layout_constraintRight_toLeftOf="@+id/exitButton"
+        app:layout_constraintTop_toTopOf="@+id/bottomNav"
+        app:srcCompat="@mipmap/ic_chevron_right_white_36dp" />
 
     <TextView
         android:id="@+id/loading"
