--- a/app/src/main/res/layout/activity_location_comment.xml
+++ b/app/src/main/res/layout/activity_location_comment.xml
@@ -11,23 +11,86 @@
         android:layout_width="155dp"
         android:layout_height="48dp"
         android:text="Send"
-        tools:layout_editor_absoluteX="103dp"
-        tools:layout_editor_absoluteY="447dp" />
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="60dp"
+        android:layout_marginRight="60dp"
+        android:layout_marginTop="8dp"
+        android:text="Congratulations, you reached your destination"
+        android:textAlignment="center"
+        android:textSize="24sp"
+        android:visibility="visible"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/commentUser"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="16dp"
+        android:text="User:"
+        android:textAlignment="center"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
+    <TextView
+        android:id="@+id/existingComment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="0dp"
+        android:text="Comment"
+        android:textSize="14sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/commentUser" />
 
     <android.support.design.widget.TextInputLayout
+        android:id="@+id/textInputLayout"
         android:layout_width="341dp"
-        android:layout_height="419dp"
-        tools:layout_editor_absoluteX="10dp"
-        tools:layout_editor_absoluteY="16dp">
+        android:layout_height="0dp"
+        android:layout_marginBottom="78dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="74dp"
+        android:background="@color/common_google_signin_btn_text_light_focused"
+        app:layout_constraintBottom_toTopOf="@+id/sendButton"
+        app:layout_constraintHorizontal_bias="0.518"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/existingComment"
+        app:layout_constraintVertical_bias="1.0">
 
         <EditText
             android:id="@+id/comment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:hint="Comment on this Location!"
+            android:background="?attr/colorButtonNormal"
+            android:backgroundTint="@color/common_google_signin_btn_text_light_focused"
+            android:elevation="5dp"
+            android:hint="Comment on this location for others to see!"
             android:inputType="textMultiLine"
             android:selectAllOnFocus="false"
             android:singleLine="false" />
+
     </android.support.design.widget.TextInputLayout>
 
 </android.support.constraint.ConstraintLayout>
